<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_all_news"
            android:icon="@drawable/all_news"
            android:title="@string/nav_all_news" />
        <item
            android:id="@+id/nav_add_news"
            android:icon="@drawable/add_news"
            android:title="@string/nav_add_news" />
        <item
            android:id="@+id/nav_my_news"
            android:icon="@drawable/my_news"
            android:title="@string/nav_my_news" />
        <item
            android:id="@+id/nav_search_news"
            android:icon="@drawable/search_news"
            android:title="@string/nav_search_news" />

    </group>

    <item android:title="@string/nav_title_other">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:title="@string/nav_settings" />
            <item
                android:id="@+id/nav_help"
                android:title="@string/nav_help" />
            <item
                android:id="@+id/nav_about"
                android:title="@string/nav_about" />
            <item
                android:id="@+id/nav_logout"
                android:title="@string/nav_logout" />
        </menu>
    </item>

</menu>
